--- a/aprosys/aprosys/templates/registration/password_reset_done.html
+++ b/aprosys/aprosys/templates/registration/password_reset_done.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container">
 
-    <img class="logo" src="{% static 'img/Logo.png' %}" alt="Logo" />
+    <img class="logo" src="{% static 'img/logoBrancoVerde.png' %}" alt="Logo" />
 
     <div class="form-container">
 
