Fix: Atualiza logo e link de retorno na página de logout
Ajusta a imagem do logo para 'img/logoBrancoVerde.png' na página de saída.
Melhora a navegação do usuário ao alterar a classe do botão de retorno
para 'login-return-button text-link' e o texto para 'Voltar ao login'.

Estas alterações visam:
- Padronizar o logo com o novo estilo visual do sistema.
- Garantir que o link de retorno após o logout seja mais claro e acessível.

--- a/aprosys/aprosys/templates/registration/logged_out.html
+++ b/aprosys/aprosys/templates/registration/logged_out.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container">
 
-    <img class="logo" src="{% static 'img/Logo.png' %}" alt="Logo" />
+    <img class="logo" src="{% static 'img/logoBrancoVerde.png' %}" alt="Logo" />
 
     <div class="form-container">
 
@@ -16,7 +16,7 @@
             Você saiu da sua conta. Para entrar novamente clique no botão abaixo.
         </p>
 
-        <div class="button">
+        <div class="button text-link">
             <a href="{% url 'login' %}" class="login-return-button">Voltar ao login</a>
         </div>
 
