Feat: Adiciona módulo de Cursos com telas de Cadastro e Pesquisa
Implementa o novo módulo de gestão de cursos.

Detalhes das alterações:
- Atualizado o menu lateral para incluir o link para a funcionalidade de Cursos.
- Criada a pasta "cursos" dentro de `templates/academico/` para organizar os templates HTML.
- Adicionadas as páginas HTML `cadastrar_curso.html` e `pesquisar_curso.html` (iniciais, com apenas o título).
- Implementadas as views e URLs correspondentes para o novo módulo de Cursos.

Essas mudanças estabelecem a estrutura base para o desenvolvimento das funcionalidades de CRUD de cursos.

--- a/aprosys/aprosys/templates/includes/menu.html
+++ b/aprosys/aprosys/templates/includes/menu.html
@@ -49,6 +49,20 @@
             </li>
         </ul>
     </li>
+    
+    <li>
+        <a class="menu-title" href="#">Cursos</a>
+        <ul class="submenu">
+            <li class="{% if request.resolver_match.url_name == 'cadastrar_curso' %}link-ativo{% endif %}">
+                <a href="{% url 'cadastrar_curso' %}">Cadastrar Curso</a>
+            </li>
+            <li class="{% if request.resolver_match.url_name == 'pesquisar_curso' %}link-ativo{% endif %}">
+                <a href="{% url 'pesquisar_curso' %}">Pesquisar Curso</a>
+            </li>
+        </ul>
+    </li>
+
+
     {% endif %}
 
     <li>
