--- a/aprosys/aprosys/templates/academico/periodos/cadastrar_periodo.html
+++ b/aprosys/aprosys/templates/academico/periodos/cadastrar_periodo.html
@@ -69,6 +69,7 @@
     </div>
   </form>
 
+  <!-- Script que cria o nome automaticamente -->
   <script>
     document.getElementById("periodo-form").addEventListener("submit", function (e) {
       const ano = document.getElementById("id_ano").value;
