--- a/aprosys/aprosys/templates/includes/menu.html
+++ b/aprosys/aprosys/templates/includes/menu.html
@@ -9,8 +9,8 @@
                 <a href="{% url 'pesquisar_aluno' %}">Pesquisar Aluno</a>
             </li>
             {% else %}
-            <li class="{% if request.resolver_match.url_name == 'matricular_aluno' %}link-ativo{% endif %}">
-                <a href="{% url 'matricular_aluno' %}">Matricular Aluno</a>
+            <li class="{% if request.resolver_match.url_name == 'cadastrar_aluno' %}link-ativo{% endif %}">
+                <a href="{% url 'cadastrar_aluno' %}">Cadastrar Aluno</a>
             </li>
             <li class="{% if request.resolver_match.url_name == 'pesquisar_aluno' %}link-ativo{% endif %}">
                 <a href="{% url 'pesquisar_aluno' %}">Pesquisar Aluno</a>
