refactor(periodo): Remove tela e menu de cadastro de período letivo
Deleta o template cadastrar_periodos.html e remove os links de acesso no menu (menu.html).

--- a/aprosys/aprosys/templates/academico/alunos/aluno_form_fields.html
+++ b/aprosys/aprosys/templates/academico/alunos/aluno_form_fields.html
@@ -99,10 +99,13 @@
 <fieldset class="chart-container">
   <h3 class="form__fieldset-heading">Dados Institucionais</h3>
   <div class="form-fields-wrapper">
-    <div class="form-group field-half">
-      {{ form.status.label_tag }}
-      {{ form.status }}
+    <div class="form-group field-full">
+      <div class="form-group field-half">
+        {{ form.status.label_tag }}
+        {{ form.status }}
+      </div>
     </div>
+    
     <div class="form-group field-half">
       {{ form.curso_interesse.label_tag }}
       {{ form.curso_interesse }}
