--- a/aprosys/aprosys/templates/academico/cursos/pesquisar_curso.html
+++ b/aprosys/aprosys/templates/academico/cursos/pesquisar_curso.html
@@ -40,30 +40,33 @@
                     <span>{% if dir == 'asc' %}▲{% else %}▼{% endif %}</span>
                 {% endif %}
             </th>
-            <th data-field="editar">
-                <span>Editar</span>
-            </th>
-        </tr>
+            <th><span>Editar</span></th>
+            <th><span>Excluir</span></th> </tr>
     </thead>
     <tbody>
         {% if cursos %}
             {% for curso in cursos %}
                 <tr>
                     <td>{{ curso.nome }}</td>
-                    <td>
-                        <a href="{% url 'editar_curso' curso.id_curso %}">              
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="edit-button"alt="Botão editar">
-                            <path fill="currentColor" d="M439.5 107.8C447.1 100.2 457.3 96 468 96C478.7 96 488.9 100.2 496.5 107.8L532.2 143.5C539.8 151.1 544 161.3 544 172C544 182.7 539.8 192.9 532.2 200.5L473.7 259L381 166.3L439.5 107.8zM358.3 189L451 281.7L238.2 494.4C231.4 501.2 222.9 506.2 213.6 508.8L99.5 540.5L131.2 426.4C133.8 417.1 138.7 408.6 145.6 401.8L358.3 189zM468 64C448.8 64 430.4 71.6 416.9 85.2L122.9 379.2C112.2 389.9 104.4 403.3 100.3 417.9L64.9 545.6C62.6 553.9 64.9 562.9 71.1 569C77.3 575.1 86.2 577.5 94.5 575.2L222.3 539.7C236.9 535.6 250.2 527.9 261 517.1L555 223.1C568.4 209.6 576 191.2 576 172C576 152.8 568.4 134.4 554.8 120.9L519.1 85.2C505.6 71.6 487.2 64 468 64z"/>
+                    <td class="table-action-cell">
+                        <a href="{% url 'editar_curso' curso.pk %}">              
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" class="edit-button">
+                                <path fill="currentColor" d="M439.5 107.8C447.1 100.2 457.3 96 468 96C478.7 96 488.9 100.2 496.5 107.8L532.2 143.5C539.8 151.1 544 161.3 544 172C544 182.7 539.8 192.9 532.2 200.5L473.7 259L381 166.3L439.5 107.8zM358.3 189L451 281.7L238.2 494.4C231.4 501.2 222.9 506.2 213.6 508.8L99.5 540.5L131.2 426.4C133.8 417.1 138.7 408.6 145.6 401.8L358.3 189zM468 64C448.8 64 430.4 71.6 416.9 85.2L122.9 379.2C112.2 389.9 104.4 403.3 100.3 417.9L64.9 545.6C62.6 553.9 64.9 562.9 71.1 569C77.3 575.1 86.2 577.5 94.5 575.2L222.3 539.7C236.9 535.6 250.2 527.9 261 517.1L555 223.1C568.4 209.6 576 191.2 576 172C576 152.8 568.4 134.4 554.8 120.9L519.1 85.2C505.6 71.6 487.2 64 468 64z"/>
+                            </svg>
+                        </a>
+                    </td>
+                    <td class="table-action-cell">
+                        <a href="{% url 'excluir_curso' curso.pk %}" onclick="return confirm('Excluir {{ curso.nome }}?');">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="delete-button">
+                                <path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/>
                             </svg>
                         </a>
                     </td>
                 </tr>
-                
             {% endfor %}
         {% else %}
             <tr>
-                <td colspan="1">Nenhum curso encontrado.</td>
-            </tr>
+                <td colspan="3">Nenhum curso encontrado.</td> </tr>
         {% endif %}
     </tbody>
 </table>
